buttons and navbar

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -31,7 +31,10 @@
 .home-card-img {
   position: relative;
   transition: display .6s ease;
+h3{
+    transition: display .6s ease;
 
+}
   img {
     height: 240px;
     width: 100%;
