--- a/app/views/account/bookings/edit_user.html.erb
+++ b/app/views/account/bookings/edit_user.html.erb
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container mt-5 buffer">
   <div class="row d-flex justify-content-center">
     <div class="col-8">
       <h2>Edit Your Account</h2>
@@ -26,7 +26,7 @@
       </div>
 
       <div class="form-actions">
-        <%= f.button :submit, "Save Changes!", class: "btn btn-primary btn-block" %>
+        <%= f.button :submit, "Save Changes!", class: "btn btn-primary btn-custom" %>
       </div>
       <% end %>
 
