--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-5 buffer">
   <h1>Create a New Listing</h1>
   <div class="row">
     <div class="col-8">
@@ -18,6 +18,6 @@
   <div class="row">
     <%= f.submit "New Listing", class: "btn btn-primary ml-3", id:"new-listing-button", style: "position: absolute; top: -1000px;" %>
     <% end %>
-  <button id="new-listing-alert" class="btn btn-primary btn-block", id="new-listing-alert">Make listing!</button>
+  <button id="new-listing-alert" class="btn btn-primary btn-custom", id="new-listing-alert">Make listing!</button>
   </div>
 </div>
