--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for :search, url: listings_path, method: "GET" do |f| %>
 <div class="search-form">
     <%= f.input :address, placeholder: 'Address', label: false %>
-    <%= f.submit "Search for nap", class: "btn btn-secondary" %>
+    <%= f.submit "Search for nap", class: "btn btn-secondary btn-custom" %>
 </div>
 <% end %>
