--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
 @import "listings/index";
 @import 'listings/show';
 @import 'components/footer';
+@import 'components/buttons';
 
 html, body {
   height: 100%;
@@ -29,6 +30,11 @@ body {
 .content {
   flex: 1 0 auto;
   background: rgba(0,0,0,0);
+}
+
+.buffer {
+  margin-top: 2em;
+  padding: 30px;
 }
 
 @keyframes fake {
