--- a/app/views/account/bookings/pending_bookings.html.erb
+++ b/app/views/account/bookings/pending_bookings.html.erb
@@ -1,31 +1,37 @@
 
-<div class="container justify-content-center">
+<div class="container justify-content-center buffer">
 
-  <div class="border-bottom mt-5">
-    <h3>Pending Bookings</h3>
+    <h3 class="border-bottom mt-5">Pending Bookings</h3>
+  <div>
+    <% if @requested_bookings.empty? %>
+      <p class="mt-3">No pending bookings</p>
+
+    <% else %>
 
     <% @requested_bookings.each do |booking| %>
-    <div class="card-product mt-2 d-flex justify-content-between">
-      <%= cl_image_tag booking.listing.photo,height: 200, crop: :fill, class: "card-img-top rounded" %>
+        <div class="card-product mt-2 d-flex justify-content-between">
+          <%= cl_image_tag booking.listing.photo,height: 200, crop: :fill, class: "card-img-top rounded" %>
 
-      <div class="card-product-infos align-items-end">
+          <div class="card-product-infos align-items-end">
 
-        <div>
-          <h2><%= booking.listing.title %></h2>
-          <h5><%= booking.listing.category %></h5>
-          <h5><%= booking.listing.address %></h5>
+            <div>
+              <h2><%= booking.listing.title %></h2>
+              <h5><%= booking.listing.category %></h5>
+              <h5><%= booking.listing.address %></h5>
+            </div>
+
+            <div>
+            </div>
+
+          </div>
+          <div class="ml-auto">
+            <h5><%= booking.listing.price %></h5>
+            <%= link_to "Accept", accept_account_booking_path(booking), method: :patch  %>
+            <%= link_to "Decline", account_booking_path(booking), method: :delete, data: { confirm: 'Are you sure?' }%>
+          </div>
         </div>
 
-        <div>
-        </div>
-
-      </div>
-      <div class="ml-auto">
-        <h5><%= booking.listing.price %></h5>
-        <%= link_to "Accept", accept_account_booking_path(booking), method: :patch  %>
-        <%= link_to "Decline", account_booking_path(booking), method: :delete, data: { confirm: 'Are you sure?' }%>
-      </div>
-    </div>
+      <% end %>
     <% end %>
   </div>
 
