--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,11 +13,6 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
       <li class="nav-item">
-        <%= link_to new_listing_path, class: "nav-link" do%>
-        <h6 style="color: white" class="mt-1"><i class="fas fa-plus"></i></h6>
-        <% end %>
-      </li>
-      <li class="nav-item active">
         <%= link_to "Notifications (#{current_user.offers.where(booked: false).count})",  pending_account_bookings_path, class: "nav-link" %>
 
       </li>
@@ -31,6 +26,7 @@
         <%= image_tag User::DEFAULT_PICTURE , class: "avatar dropdown-toggle", style:"cursor: hand; cursor: pointer;", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
         <% end %>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+          <%= link_to "Add Listing", new_listing_path, class: "dropdown-item" %>
           <%= link_to "My Account", account_bookings_path, class: "dropdown-item" %>
           <%= link_to "Edit Account", account_edit_path, class: "dropdown-item" %>
           <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
