--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -85,3 +85,12 @@ body {
 {
 color:red
 }
+
+.category-icons {
+  display: flex;
+  flex-direction: column;
+}
+
+.upload-photo {
+  margin-top: 398px;
+}
