--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -54,18 +54,12 @@
               <div>
               <p><%= listing.category %></p>
               <p><%= listing.address %></p>
-              <div class="listing-addons d-flex">
+              <div class="listing-addons">
                 <div>
-                  <img src="../../assets/images/meal.png" alt="meal">
-                </div>
-                <div>
-                  <img src="../../assets/images/pillow.png" alt="pillow">
-                </div>
-                <div>
-                  <img src="../../assets/images/spa.png" alt="massage">
-                </div>
-                <div>
-                  <img src="../../assets/images/dog.png" alt="dog">
+                  <img src="https://cdn2.iconfinder.com/data/icons/doing-housework-part-1/64/house-03-512.png" alt="pillow" style="filter: invert(1);">
+                  <img src="https://cdn3.iconfinder.com/data/icons/solid-locations-icon-set/64/Massage_therapist_2-512.png" alt="massage" style="filter: invert(1);">
+                  <img src="https://image.flaticon.com/icons/svg/2064/2064847.svg" alt="dog" style="filter: invert(1);">
+                  <img src="https://cdn2.iconfinder.com/data/icons/food-drink-10/24/food-drink-36-512.png" alt="meal" style="filter: invert(1);">
                 </div>
               </div>
               </div>
