--- a/app/views/account/bookings/edit_user.html.erb
+++ b/app/views/account/bookings/edit_user.html.erb
@@ -21,7 +21,7 @@
         input_html: { autocomplete: "email" }%>
         <div class="col-4">
           <%= image_tag "", width: 100, class: "hidden", id: "photo-preview", style: "border-radius: 50%;" %>
-          <%= f.input :photo, input_html: { class: 'hidden d-none', id: 'photo-input'}, label_html: { class: 'upload-photo'}, label: '📷 Upload a photo' %>
+          <%= f.input :photo, input_html: { class: 'hidden d-none', id: 'photo-input'}, label_html: { class: 'upload-photo btn-custom'}, label: '📷 Upload a photo' %>
         </div>
       </div>
 
