--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container mt-5">
   <div class="row d-flex justify-content-center">
     <div class="col-8">
-      <h2>Sign up</h2>
+      <h2 class="mt-5">Sign up</h2>
 
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= f.error_notification %>
@@ -29,7 +29,7 @@
         </div>
 
         <div class="form-actions">
-          <%= f.button :submit, "Sign up", class: "btn btn-primary btn-block" %>
+          <%= f.button :submit, "Sign up", class: "btn btn-custom btn-block" %>
         </div>
       <% end %>
       <%= render "devise/shared/links" %>
