--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,6 +7,6 @@
     <a href="#"><i class="fab fa-linkedin"></i></a>
   </div>
   <div class="footer-copyright">
-    Siesta Fiesta ® is a registered trademark of Afternoon Delight Ltd.
+    Siesta Fiesta ® is a registered trademark of <a href="https://www.buycoffeeworldwide.com/" target="_blank">Afternoon Delight Ltd</a>.
   </div>
 </div>
